# table-parser

./: .travis.yml  README.md  table-parser.cabal
src/: Main.hs  Model.hs  Parser.hs  TableParser.hs
t/: t.sql
test/: Parser.hs  ParserSpec.hs
test/t/: t.sql  t1.sql  t10.sql  t11.sql  t12.sql  t2.sql  t3.sql  t4.sql  t5.sql  t6.sql  t7.sql  t8.sql  t9.sql
