name:                table-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/table-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable table-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       TableParser
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , utf8-string
                     , either
                     , parsec >= 3.1.11
                     , transformers
                     , text
                     , directory

test-suite table-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , table-parser
                     , hspec
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

